Project Signing - Auto generated commit