@@ -1,55 +1,30 @@
-# bl-readings-service
+# BridgeLogisticsFe
 
-## Starting Spark
+This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 8.0.2.
 
-```bash
-mvn scala:run -DmainClass=org.jesperancinha.bridgelogistics.readings.ReadingsLauncher
-```
-## Start Jar
+## Development server
 
-```shell
-java --add-exports=java.base/jdk.internal.ref=ALL-UNNAMED --add-exports=java.base/sun.nio.ch=ALL-UNNAMED -jar target/bl-passengers-readings-service-jar-with-dependencies.jar
-```
+Run `ng serve` for a dev server. Navigate to `http://localhost:4200/`. The app will automatically reload if you change any of the source files.
 
-## Installing cassandra
+## Code scaffolding
 
-```bash
-brew install cassandra
-```
+Run `ng generate component component-name` to generate a new component. You can also use `ng generate directive|pipe|service|class|guard|interface|enum|module`.
 
-## Starting cassandra
-Note that some cassandra versions only seem to run well with Java 8
-```bash
-cassandra
-```
+## Build
 
-## Cassandra command line
+Run `ng build` to build the project. The build artifacts will be stored in the `dist/` directory. Use the `--prod` flag for a production build.
 
-```bash
-cqlsh
-```
+## Running unit tests
 
-```genericsql
-DESCRIBE TABLES
-SELECT *  FROM java_api.products;
+Run `ng test` to execute the unit tests via [Karma](https://karma-runner.github.io).
 
-```
-## Hints & Tricks
+## Running end-to-end tests
 
-```bash
-brew install sbt
-brew upgrade sbt
-```
-## References
+Run `ng e2e` to execute the end-to-end tests via [Protractor](http://www.protractortest.org/).
 
--   [Reading configurations in Scala](https://medium.com/@ramkarnani24/reading-configurations-in-scala-f987f839f54d)
--   [Accessing Cassandra from Spark in Java](https://www.datastax.com/blog/2014/08/accessing-cassandra-spark-java)
--   [Step by Step of Configuring Apache Spark to Connect with Cassandra](https://chongyaorobin.wordpress.com/2015/07/16/step-by-step-of-how-to-configure-apache-spark-to-connect-with-cassandra/)
--   [Install All the THINGS! But especially Apache Cassandra, Apache Spark and Jupyter](https://www.datastax.com/blog/2019/04/install-all-things-especially-apache-cassandra-apache-spark-and-jupyter)
--   [Getting Started with Cassandra and Spark](https://www.codementor.io/@sheena/installing-cassandra-spark-linux-debian-ubuntu-14-du107vbhx)
--   [Structured Streaming + Kafka Integration Guide (Kafka broker version 0.10.0 or higher](https://spark.apache.org/docs/latest/structured-streaming-kafka-integration.html)
--   [Apache Spark - Lightning-fast unified analytics engine](https://spark.apache.org/)
--   [Apache Spark - Monitoring and Instrumentation](https://spark.apache.org/docs/latest/monitoring.html)
+## Further help
+
+To get more help on the Angular CLI use `ng help` or go check out the [Angular CLI README](https://github.com/angular/angular-cli/blob/master/README.md).
 
 ## About me 👨🏽‍💻🚀🏳️‍🌈
 
